Add username field into users table
