# localpaas_app/usecase/sessionuc/sessiondto/base.go
@@ -12,6 +12,7 @@ import (
 
 type UserResp struct {
 	ID             string                  `json:"id"`
+	Username       string                  `json:"username"`
 	Email          string                  `json:"email"`
 	Role           base.UserRole           `json:"role"`
 	Status         base.UserStatus         `json:"status"`
